# fastnum

./: .gitignore  CHANGES.md  Cargo.toml  README.md  TODO.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml
benchmark/: Cargo.toml  criterion.toml
benchmark/.cargo/: config.toml
benchmark/benches/: add.rs  allocation.rs  benchmark.rs  div.rs  math.rs  mul.rs  parse.rs  sqrt.rs  sub.rs
benchmark/benches/decimal/: _macro.rs  add.rs  allocation.rs  div.rs  from_f64.rs  intrinsics.rs  mul.rs  parse.rs  recip.rs  smoke.rs  sqrt.rs  sub.rs  to_f64.rs
benchmark/benches/int/: intrinsics.rs  math.rs
doc/: LIB.md
examples/base/: Cargo.toml
examples/base/src/: main.rs
examples/cast/: Cargo.toml
examples/cast/src/: main.rs
examples/competitors/: Cargo.toml
examples/competitors/src/: main.rs
examples/compile-time-variables/: Cargo.toml
examples/compile-time-variables/.cargo/: config.toml
examples/compile-time-variables/src/: main.rs
examples/math/: Cargo.toml
examples/math/src/: main.rs
examples/rounding/: Cargo.toml
examples/rounding/src/: main.rs
examples/sort/: Cargo.toml
examples/sort/src/: main.rs
examples/sqlx-postgres/: Cargo.toml
examples/sqlx-postgres/src/: main.rs
examples/tokio-postgres/: Cargo.toml
examples/tokio-postgres/src/: main.rs
examples/wasm/: Cargo.toml  index.html
examples/wasm/src/: lib.rs
src/: bint.rs  cast.rs  decimal.rs  doc.rs  int.rs  lib.rs  utils.rs
src/bint/: assertions.rs  bits.rs  carrying.rs  checked.rs  cmp.rs  consts.rs  convert.rs  doc.rs  endian.rs  error.rs  impls.rs  int.rs  intrinsics.rs  macros.rs  math.rs  num.rs  overflowing.rs  saturating.rs  strict.rs  uint.rs  utils.rs  widening.rs  wrapping.rs
src/bint/convert/: from_bytes.rs  from_str.rs  to_bytes.rs  to_str.rs  utils.rs
src/bint/doc/: bits.rs  carrying.rs  checked.rs  cmp.rs  consts.rs  convert.rs  endian.rs  num.rs  overflowing.rs  saturating.rs  strict.rs  widening.rs  wrapping.rs
src/bint/impls/: fmt.rs  from.rs  iter.rs  numtraits.rs  ops.rs  to.rs
src/bint/impls/ops/: add.rs  bits.rs  div.rs  mul.rs  neg.rs  rem.rs  shift.rs  sub.rs
src/bint/int/: bits.rs  checked.rs  cmp.rs  convert.rs  endian.rs  intrinsics.rs  math.rs  num.rs  overflowing.rs  saturating.rs  strict.rs  widening.rs  wrapping.rs
src/bint/int/convert/: from_float.rs  from_int.rs  from_str.rs  from_uint.rs  to_int.rs  to_uint.rs
src/bint/int/impls/: cast.rs  default.rs  fmt.rs  from.rs  iter.rs  numtraits.rs  ops.rs  to.rs  zeroize.rs
src/bint/int/intrinsics/: transmute.rs
src/bint/intrinsics/: add.rs  cmp.rs  digits.rs  div.rs  ilog.rs  mul.rs  powers.rs  transmute.rs  u128.rs
src/bint/intrinsics/u128/: powers.rs
src/bint/uint/: bits.rs  carrying.rs  checked.rs  cmp.rs  convert.rs  endian.rs  impls.rs  intrinsics.rs  math.rs  num.rs  overflowing.rs  powers.rs  saturating.rs  strict.rs  unchecked.rs  widening.rs  wrapping.rs
src/bint/uint/convert/: from_float.rs  from_int.rs  from_str.rs  from_uint.rs  to_int.rs  to_str.rs
src/bint/uint/impls/: cast.rs  default.rs  fmt.rs  from.rs  from_str.rs  iter.rs  numtraits.rs  ops.rs  to.rs  zeroize.rs
src/bint/uint/intrinsics/: powers.rs  transmute.rs
src/bint/uint/math/: add.rs  div.rs  ilog.rs  mul.rs  utils.rs
src/bint/utils/: types.rs
src/decimal/: assertions.rs  category.rs  context.rs  dec.rs  doc.rs  error.rs  errors.rs  extras.rs  flags.rs  format.rs  impls.rs  macros.rs  math.rs  overflow.rs  round.rs  rounding.rs  sign.rs  signals.rs  signed.rs  udec.rs  unsigned.rs  utils.rs
src/decimal/context/: rounding_mode.rs  signal_traps.rs
src/decimal/dec/: cmp.rs  construct.rs  consts.rs  control_block.rs  convert.rs  extra_precision.rs  extras.rs  format.rs  impls.rs  intrinsics.rs  math.rs  normalize.rs  parse.rs  resize.rs  round.rs  scale.rs  transmute.rs  truncate.rs  utils.rs
src/decimal/dec/control_block/: context.rs  flags.rs  (+2 more)
src/decimal/doc/: log.rs  resize.rs  trunc.rs  with_ctx.rs  with_rounding_mode.rs
src/decimal/errors/: decimal.rs  parse.rs
src/decimal/extras/: diesel.rs  serde.rs  sqlx.rs  utils.rs
src/decimal/impls/: numtraits.rs  ops.rs
src/decimal/macros/: context.rs  dec.rs  signals.rs
src/decimal/math/: error.rs  f32.rs  f64.rs
src/decimal/round/: policy.rs
src/decimal/signed/: doc.rs  impls.rs  parse.rs  sign.rs
src/decimal/udec/: consts.rs  impls.rs
src/decimal/unsigned/: doc.rs  extras.rs  impls.rs  math.rs  parse.rs  round.rs
src/decimal/utils/: cast.rs  fmt.rs  name.rs  types.rs
src/int/: assertions.rs  doc.rs  error.rs  int.rs  macros.rs  parse.rs  uint.rs
src/int/uint/: convert.rs  intrinsics.rs  math.rs
src/utils/: const_generics.rs
tests/: tests.rs
tests/decimal/: assertions.rs  cmp.rs  common.rs  consts.rs  d256.rs  extras.rs  format.rs  from.rs  hash.rs  intrinsics.rs  math.rs  mod.rs  numtraits.rs  parse.rs  quantize.rs  quantum.rs  round.rs  scale.rs  signals.rs  smoke.rs  to.rs  transmute.rs  ud256.rs
tests/decimal/common/: _skeleton.rs  cmp.rs  consts.rs  extras.rs  fmt.rs  from.rs  hash.rs  math.rs  numtraits.rs  parse.rs  quantize.rs  quantum.rs  round.rs  scale.rs  smoke.rs  to.rs
tests/decimal/d128/: cmp.rs  fmt.rs  hash.rs  parse.rs  scale.rs
tests/decimal/d256/: cmp.rs  fmt.rs  hash.rs  parse.rs  scale.rs
tests/decimal/d512/: cmp.rs  extras.rs  fmt.rs  hash.rs  scale.rs
tests/decimal/extras/: diesel.rs  serde.rs  sqlx.rs  utoipa.rs
tests/decimal/from/: f32.rs  f64.rs  int.rs
tests/decimal/math/: abs.rs  add.rs  div.rs  exp.rs  ln.rs  mul.rs  pow.rs  recip.rs  rem.rs  sqrt.rs  sub.rs  trigonometric.rs
tests/decimal/to/: f32.rs  f64.rs  int.rs  uint.rs
tests/decimal/ud128/: cmp.rs  extras.rs  fmt.rs  parse.rs  scale.rs
tests/decimal/ud256/: cmp.rs  extras.rs  fmt.rs  parse.rs  scale.rs
tests/decimal/ud512/: cmp.rs  fmt.rs  parse.rs  scale.rs
tests/int/: common.rs  mod.rs  sign_extension.rs  smoke.rs  u128.rs
tests/int/common/: _skeleton.rs  from.rs
tests/int/from/: int.rs
tests/int/smoke/: cast.rs  intrinsics.rs  parse.rs
tests/int/u128/: div.rs
tests/int/u256/: mod.rs  parse.rs
(+258 files in other folders)
