[package]
name = "fastnum"
version = "0.5.0"
edition = "2021"
authors = ["Neo"]
description = "Fast decimal numbers library"
documentation = "https://docs.rs/fastnum/"
homepage = "https://github.com/neogenie/fastnum/"
repository = "https://github.com/neogenie/fastnum"
readme = "README.md"
keywords = [
    "numeric",
    "decimal",
    "const",
    "fixed-point",
    "crypto"
]
categories = ["mathematics", "science", "no-std"]
license = "MIT OR Apache-2.0"
autobenches = false
exclude = ["examples/*", "benchmark/*"]
rust-version = "1.87"

[lib]
bench = false

[dependencies]

bnum = { version = "0.12.0", default-features = false }

num-integer = { version = "0.1", default-features = false, optional = true }
num-traits = { version = "0.2", default-features = false, optional = true }
zeroize = { version = "1.6", default-features = false, optional = true }
rand = { version = "0.8", features = ["min_const_gen"], default-features = false, optional = true }
serde = { version = ">= 1.0.0", default-features = false, optional = true }
borsh = { version = ">= 1.0.0", default-features = false, optional = true }
diesel = { version = ">=2.2.4", default-features = false, features = ["numeric"], optional = true }
sqlx = { version = ">=0.8.0", default-features = false, optional = true }
bytes = { version = "1.1.0", default-features = false, optional = true }
byteorder = { version = "1.5.0", default-features = false, optional = true }
utoipa = { version = ">= 5.0.0", default-features = false, optional = true }
tokio-postgres = { version = "0.7.13", default-features = false, optional = true }

[dev-dependencies]
rstest = { version = "0.23.0" }
serde_test = { version = ">= 1.0.0" }
serde_json = { version = ">=0.8.0, <2.0" }
paste = { version = "1.0.15" }
itertools = { version = "0.14.0" }

[build-dependencies]
#rustversion = "1"

[features]
default = ["std"]
std = []

numtraits = ["num-traits", "bnum/numtraits", "num-integer"]

rand = ["dep:rand"]
zeroize = ["dep:zeroize"]

serde = ["dep:serde", "bnum/serde"]
borsh = ["dep:borsh", "bnum/borsh"]

diesel = ["dep:diesel"]
diesel_postgres = ["diesel", "diesel/postgres_backend", "extra-postgres"]
diesel_mysql = ["diesel", "diesel/mysql_backend"]

sqlx = ["dep:sqlx"]
sqlx_postgres = ["sqlx", "sqlx/postgres", "extra-postgres-encode"]
sqlx_mysql = ["sqlx", "sqlx/mysql"]

utoipa = ["dep:utoipa", "utoipa/macros"]

tokio-postgres = ["dep:tokio-postgres", "extra-postgres-encode"]

dev = []

# For internal use only
test-util = ["num-traits/std"]
extra-postgres = ["num-traits"]
extra-postgres-encode = ["extra-postgres", "bytes", "byteorder"]

[profile.release]
lto = true # enable link-time optimization for faster runtime, but slower compile time
opt-level = 3 # maximum optimization level for faster runtime, but slower compile time

[package.metadata.docs.rs]
# FIXME:
# sqlx_postgres 0.8.6 failed with rustc 1.91.0-nightly (1ebbd87a6 2025-08-11)
# https://docs.rs/crate/fastnum/0.4.3/builds/2408007/x86_64-unknown-linux-gnu_json.txt
# https://github.com/launchbadge/sqlx/issues/3973
all-features = false
rustdoc-args = ["--cfg", "docsrs"]

[[test]]
name = "tests"
required-features = ["test-util"]

