[package]
name = "fastnum_benchmarks"
version = "0.0.1"
authors = ["Neo"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dev-dependencies]
criterion = { version = "0.5" }
fastnum = { path = "../" }
bigdecimal = "0.4.6"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = true # enable link-time optimisation for faster runtime, but slower compile time
opt-level = 3 # maximum optimisation level for faster runtime, but slower compile time