[package]
name = "fastnum_benchmarks"
version = "0.0.1"
authors = ["Neo"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dev-dependencies]
criterion = { version = "0.6.0" }
fastnum = { path = "../" }
bigdecimal = { version = "0.4.8" }
rust_decimal = { version = "1.37.1", features = ["maths"] }
num-traits = "0.2.19"
rust_decimal_macros = "1.37.1"
ryu = "1.0"

[[bench]]
name = "decimal_add"
path = "benches/decimal/add.rs"
harness = false

[[bench]]
name = "decimal_allocation"
path = "benches/decimal/allocation.rs"
harness = false

[[bench]]
name = "decimal_parse"
path = "benches/decimal/parse.rs"
harness = false

[[bench]]
name = "decimal_from_f64"
path = "benches/decimal/from_f64.rs"
harness = false

[[bench]]
name = "decimal_to_f64"
path = "benches/decimal/to_f64.rs"
harness = false

[[bench]]
name = "decimal_div"
path = "benches/decimal/div.rs"
harness = false

[[bench]]
name = "decimal_mul"
path = "benches/decimal/mul.rs"
harness = false

[[bench]]
name = "decimal_sqrt"
path = "benches/decimal/sqrt.rs"
harness = false

[[bench]]
name = "decimal_sub"
path = "benches/decimal/sub.rs"
harness = false

[[bench]]
name = "int_math"
path = "benches/int/math.rs"
harness = false

[profile.release]
lto = true # enable link-time optimisation for faster runtime, but slower compile time
opt-level = 3 # maximum optimisation level for faster runtime, but slower compile time
#target-cpu = "native"