[package]
name = "fastnum_tokio_postgres"
version = "0.0.1"
authors = ["Neo"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
fastnum = { path = "../../", features = ["tokio-postgres"] }
tokio-postgres = { version = "0.7.13"}
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = "2.5.0"